force-app/main/default/objects/Work_Order_Note__c/Work_Order_Note__c.object-meta.xml
<CustomObject>
    <label>Work Order Note</label>
    <nameField>
        <displayFormat>WON-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>