force-app/main/default/objects/Work_Order_Note__c/fields/LOVING_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>LOVING_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to LOVING custom Work_Order__c. The legacy Work_Order__c field on this object may reference the standard WorkOrder in some org configurations; this field correctly references the custom Work_Order__c object used throughout the LOVING platform.</description>
    <label>Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Work Order Notes (LOVING)</relationshipLabel>
    <relationshipName>Work_Order_Notes_LOVING</relationshipName>
    <type>Lookup</type>
</CustomField>