force-app/main/default/objects/Work_Order_Note__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
                <default>true</default>
                <label>System</label>
            </value>
            <value>
                <fullName>FM</fullName>
            </value>
            <value>
                <fullName>Ops Manager</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>